bread-crumbs a vistas principales del profesor y sus reglas de navegación solo falta estilos a cerrar sesion

--- a/tecolotl-web/src/main/webapp/profesor/calificacion-gramatica.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/calificacion-gramatica.xhtml
@@ -17,7 +17,7 @@
                  <li class="uk-text-uppercase "><h:link styleClass="letra-color-subnav" outcome="admin-alumnos" value="Group Details"/></li>-->
                 <li><h:link outcome="dashboard" value="#{etiqueta['home']}"/></li>
                 <li><h:link outcome="admin-alumnos" value="Student Administration"/></li>
-                <li><h:link outcome="tablero" value="Student Homework"/></li>
+                <li><h:link outcome="tareas" value="Student Homework"/></li>
                 <li><span>Word Game</span></li>
                 <li class="boton-cerrar">
                     <h:form><h:commandLink action="#{profesorControlador.cerrarSesion}" value="Cerrar Sesion"/></h:form>
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="boton-regresa2 uk-width-2-3@m">
-            <h:button styleClass="boton-maestro-base2" value="regresar" outcome="tablero"/>
+            <h:button styleClass="boton-maestro-base2" value="regresar" outcome="tareas"/>
         </div>
     </div>
 
