Ahora regresa las respuestas de forma correcta.

--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -169,8 +169,7 @@
                                                       layout="block"
                                                       styleClass="respuesta "
                                                       pt:data-index="#{resp.index}"
-                                                      pt:data-id="#{preRespuestas.relacionarOracionModelo.id}"
-                                                      >
+                                                      pt:data-id="#{preRespuestas.relacionarOracionModelo.id}">
                                             #{preRespuestas.relacionarOracionModelo.respuesta}
                                         </h:panelGroup>
                                     </ui:repeat>
