--- a/tecolotl-web/src/main/webapp/error/no-manejable.xhtml
+++ b/tecolotl-web/src/main/webapp/error/no-manejable.xhtml
@@ -9,7 +9,9 @@
     <title>No manejable</title>
 </h:head>
 <h:body>
-    <h1>Estimado usuario tenemos un inconveniete contacte a su administrador</h1>
+    <h:outputStylesheet library="css" name="/error/no-manejable.css"/>
+    <h:outputStylesheet library="css" name="letra.css"/>
+    <h1>Estimado usuario tenemos un inconveniente contacte a su administrador</h1>
     <h:graphicImage library="img" name="/fondo/no-existe.svg" uk-svg=""/>
     <h:form>
         <h:commandButton value="regresar" action="#{noManjableControlador.regresoPrincipal}"/>
