--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -99,7 +99,7 @@
                                     <div class="">
                                         <div class="">
                                             <div uk-form-custom="target: > * > span:first-child">
-                                                <select class="width-select">
+                                                <select class="width-select" disabled="disabled">
                                                     <option value="1">Ultimos 7 Dias</option>
                                                     <option value="2">Ultimo mes</option>
                                                     <option value="3">Ultimo año</option>
