se quito la condicion en la consulta de duro a variable

--- a/tecolotl-web/src/main/webapp/profesor/calificacion-mapamental.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/calificacion-mapamental.xhtml
@@ -13,7 +13,34 @@
         <f:viewAction action="#{calificaMapaMentalControlador.busca}"/>
     </f:metadata>
     <ui:define name="menu">
+        <div>
+            <ul class="uk-subnav nav-sub uk-visible@m " uk-margin="">
+                <!-- <li ><h:link outcome="dashboard-maestro" value="#{etiqueta['home']}" styleClass="letra-color-subnav"/></li>
+                 <li class="uk-text-uppercase "><h:link styleClass="letra-color-subnav" outcome="admin-alumnos" value="Group Details"/></li>-->
+                <li><h:link outcome="dashboard" value="#{etiqueta['home']}"/></li>
+                <li><h:link outcome="admin-alumnos" value="Student Administration"/></li>
+                <li><h:link outcome="tablero" value="Student Homework"/></li>
+                <li><h:link outcome="tareas" value="Think-Develop And Share"/></li>
+                <li><span>Rate Think-Develop And Share</span></li>
+                <li class="boton-cerrar">
+                    <h:form><h:commandLink action="#{profesorControlador.cerrarSesion}" value="Cerrar Sesion"/></h:form>
+                </li>
+            </ul>
+        </div>
+        <div class="uk-navbar-left uk-hidden@m">
+            <a class="uk-navbar-toggle" uk-navbar-toggle-icon="" href="" uk-toggle="target: #menu" type="button"/>
+        </div>
+        <div id="menu" uk-offcanvas="overlay: true">
+            <div class="uk-offcanvas-bar  ">
+                <button class="uk-offcanvas-close" type="button" uk-close=""/>
+                <ul class="uk-nav  nav-sub-offcanvas ">
+                    <li ><h:link outcome="dashboard-maestro" value="Home" styleClass="letra-color-subnav"/></li>
+                    <li class="uk-text-uppercase "><h:link styleClass="letra-color-subnav" outcome="admin-alumnos" value="Group Details"/></li>
+                </ul>
+            </div>
+        </div>
     </ui:define>
+
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="/profesor/calificacion.css"/>
         <h:panelGroup layout="block" class="mapa-mental">
