--- a/tecolotl-web/src/main/webapp/profesor/calificacion-mapamental.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/calificacion-mapamental.xhtml
@@ -43,8 +43,43 @@
 
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="/profesor/calificacion.css"/>
-        <h:panelGroup layout="block" class="mapa-mental">
-            <h2 class="uk-text-center">Calificacion Mapa Mental</h2>
+       <h:panelGroup layout="block" class="mapa-mental">
+
+            <div class="uk-margin-large-top"><h1 class="uk-margin-top lescuadron">Rate Think-Develop And Share</h1></div>
+
+            <div class="uk-grid" uk-grid="">
+                <div class="uk-width-1-3@m">
+                    <div class="uk-card uk-card-default uk-card-small color-card-six margen-one">
+                        <div class="uk-card-header barder-card">
+                            <div class="uk-grid-small uk-flex-middle" uk-grid="">
+                                <div class="uk-width-auto">
+                                    <h:graphicImage styleClass="uk-border-circle" library="img" name="/avatar/maestro.svg" width="50" height="50"/>
+                                </div>
+                                <div class="uk-width-expand">
+                                    <h3 class="uk-card-title uk-margin-remove-bottom uk-text-small uk-text-uppercase uk-text-bold">
+                                        #{profesorControlador.profesorModelo.nombre.concat(' ').concat(profesorControlador.profesorModelo.apellidoPaterno).concat(' ').concat(profesorControlador.profesorModelo.apellidoMaterno)}
+                                    </h3>
+                                    <p class="uk-text-meta uk-margin-remove-top uk-text-small"><span>#{profesorControlador.profesorModelo.apodo}</span></p>
+                                </div>
+                                <div class="uk-width-1-1@s">
+                                    <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">Nickname: </span>#{profesorControlador.profesorModelo.apodo}</p>
+                                    <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">Email: </span>#{profesorControlador.profesorModelo.correoEletronico}</p>
+                                    <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold uk-text-primary">Edit Profile: </span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="uk-card-body padding-card-body">
+                            <h3 class="uk-text-uppercase uk-text-bold ">grupo</h3>
+                            <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">Grado: </span>#{profesorGrupoControlador.grupoModelo.grado}</p>
+                            <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">Grupo: </span>#{profesorGrupoControlador.grupoModelo.grupo}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="boton-regresa uk-width-2-3@m">
+                    <h:button styleClass="boton-maestro-base" value="regresar" outcome="tablero"/>
+                </div>
+            </div>
+
             <h:form id="formulario" styleClass="uk-form-controls uk-grid" pt:uk-grid="" >
                 <h:panelGroup layout="block" styleClass="uk-width-3-4@m uk-grid uk-child-width-1-2@m" pt:uk-grid="">
                     <ui:repeat value="#{calificaMapaMentalControlador.tareaMapaMentalModeloLista}" var="tareaMapaMental">
