--- a/tecolotl-web/src/main/webapp/profesor/calificacion-mapamental.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/calificacion-mapamental.xhtml
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="boton-regresa uk-width-2-3@m">
-                    <h:button styleClass="boton-maestro-base" value="regresar" outcome="tablero"/>
+                    <h:button styleClass="boton-maestro-base" value="regresar" outcome="tareas"/>
                 </div>
             </div>
 
