estilos al boton regresar de la vista no manejable

--- a/tecolotl-web/src/main/webapp/error/no-manejable.xhtml
+++ b/tecolotl-web/src/main/webapp/error/no-manejable.xhtml
@@ -13,8 +13,8 @@
     <h:outputStylesheet library="css" name="letra.css"/>
     <h1>Estimado usuario tenemos un inconveniente contacte a su administrador</h1>
     <h:graphicImage library="img" name="/fondo/no-existe.svg" uk-svg=""/>
-    <h:form>
-        <h:commandButton value="regresar" action="#{noManjableControlador.regresoPrincipal}"/>
+    <h:form styleClass="centrado">
+        <h:commandButton styleClass="btnsin-permiso" value="regresar" action="#{noManjableControlador.regresoPrincipal}"/>
     </h:form>
 </h:body>
 </html>
