Calidica mapa mental de forma correcta

--- a/tecolotl-web/src/main/webapp/profesor/calificacion-mapamental.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/calificacion-mapamental.xhtml
@@ -101,9 +101,7 @@
                     </div>
                 </h:panelGroup>
                 <div class="uk-width-1-4@m">
-                    <div class="bmap-#{calificaMapaMentalControlador.tareaMapaMentalModeloLista[0].cardinalidad}">
-
-                    </div>
+                    <div class="bmap-#{calificaMapaMentalControlador.tareaMapaMentalModeloLista[0].cardinalidad}"></div>
                     <p>Score: <span style="color: red; font-weight: bold"/></p>
                 </div>
                 <h:commandButton value="Calificar" styleClass="boton-escuadron-base" action="#{calificaMapaMentalControlador.califica}" onclick="return validaComentario()"/>
