--- a/tecolotl-web/src/main/webapp/ingreso.xhtml
+++ b/tecolotl-web/src/main/webapp/ingreso.xhtml
@@ -8,9 +8,11 @@
       xmlns:c="http://java.sun.com/jsp/jstl/core">
 <h:head>
     <title>#{etiqueta['logging.registry']}</title>
+    <link  rel="shortcut icon"  href="#{resource['img/favicon.ico']}"/>
     <h:outputStylesheet library="css" name="uikit.css"/>
     <h:outputStylesheet library="css" name="ingreso.css"/>
     <h:outputStylesheet library="css" name="alumno/inicio-sesion.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </h:head>
 <h:body>
     <div class="uk-section">
