--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -11,6 +11,8 @@
 <h:head>
 	<title>Esquadron</title>
 	<meta name="google-site-verification" content="DLGw7JmFbDOC2lHAxcYSXxNJuYlID8QR6KrnicJ0oKI" />
+	<link  rel="shortcut icon"  href="#{resource['img/favicon.ico']}"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<h:outputStylesheet library="css" name="uikit.css"/>
 	<h:outputStylesheet library="css" name="landing-esquadron.css"/>
 </h:head>
