--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -453,7 +453,7 @@
         <h:outputScript library="js" name="profesor/admin-alumnos.js"/>
     </ui:define>
     <ui:define name="file-js">
-<!--        <h:outputScript library="js" name="/profesor/contrasena.js" />-->
+        <h:outputScript library="js" name="/profesor/contrasena.js" />
         <h:outputScript library="js" name="/profesor/html2pdf.js"/>
         <script type="application/javascript">
             document.querySelector('#boton').addEventListener('click',generatePDF);
