--- a/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
@@ -131,7 +131,7 @@
                 </table>
             </div>
         </h:panelGroup>
-        <ul style="display: none">
+        <ul id="apodos" style="display: none">
             <ui:repeat value="#{agregarCsvControlador.apodos}" var="apodo">
                 <li>${apodo}</li>
             </ui:repeat>
